--- a/01-第一个页面.html
+++ b/01-第一个页面.html
@@ -3,9 +3,12 @@
 <head>
         <title>第一个页面</title>
 </head>
+<link rel="stylesheet" href="index.css">
 
 <body>
         ababaababa爱吃
+        <h1>h1</h1>
+        <script src="index.js"></script>
 </body>
 
 </html>
